--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose-sequence": "^6.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
