--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
