--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.10",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/websockets": "^10.3.10",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -35,6 +36,7 @@
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.1",
     "mongoose-sequence": "^6.0.1",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.3",
