--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Build APK and Notify User
 
 on:
-  workflow_dispatch:  # Allows manual trigger via API
+  workflow_dispatch:
     inputs:
       appName:
         description: 'App Name'
@@ -15,26 +15,28 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Use an Ubuntu environment for building APKs
+    runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Java for Android build
+      # Step 2: Set up JDK 11 for Android build
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '11'
 
+      # Step 3: Install any dependencies needed for your build
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-11-jdk
 
-      # Cache Gradle for faster builds
-      - name: Cache Gradle
+      # Step 4: Cache Gradle dependencies
+      - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
@@ -42,22 +44,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle
 
-      # Run the build process
+      # Step 5: Build APK
       - name: Build APK
         run: ./gradlew assembleRelease
 
-      # Upload APK to GitHub Actions as an artifact
+      # Step 6: Upload APK as an artifact
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v3
         with:
           name: app-release-apk
           path: app/build/outputs/apk/release/app-release.apk
 
-      # Send email using Mailgun
+      # Step 7: Send email notification via Mailgun
       - name: Notify user via Mailgun
         run: |
           curl -s --user "api:${{ secrets.MAILGUN_API_KEY }}" \
-          https://api.mailgun.net/v3/sandbox5c7d6e26eb8a4cd188300c24a8bde0a1.mailgun.org/messages \
+          https://api.mailgun.net/v3/${{ secrets.MAILGUN_DOMAIN }}/messages \
           -F from="Your App <no-reply@yourdomain.com>" \
           -F to="${{ github.event.inputs.email }}" \
           -F subject="Your APK is ready!" \
